--- a/pg3/src/App.css
+++ b/pg3/src/App.css
@@ -40,3 +40,26 @@
 .read-the-docs {
   color: #888;
 }
+
+.board {
+  width: 270px;
+  height: 270px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.stone {
+  width: 20px;
+  height: 20px;
+  border: 5px outset #050505;
+  background-color: #888;
+}
+
+.blank {
+  width: 28px;
+  height: 28px;
+  border: 1px solid black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
